# aws-educate-tpet-backend

./: .gitignore  .pre-commit-config.yaml  AWS Educate TPET Backend Architecture Diagram.drawio.xml  README.md  pyproject.toml  samconfig.toml  template.yaml  test_jira_connect_github.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: auth_service.yaml  campaign_service.yaml  email_service.yaml  file_service.yaml  lint.yaml  slack_notification.yaml  terraform.yaml  webhook_service.yaml
create_campaign/: lambda_function.py
frontend/: index.html  script.js  styles.css
src/: email_sender.py  lambda_function.py  main.tf  samconfig.toml  template.yaml
src/.aws-sam/: build.toml
src/auth_service/: README.md
src/campaign/: Dockerfile  dynamodb.py  lambda_function.py  s3.py  ses.py  sqs.py  template.yaml
src/create_campaign/: samconfig.toml
src/email_service/: README.md
src/file_service/: README.md  upload_file.py  upload_multiple_file.py
src/send-email/: Dockerfile  lambda_function.py  requirements.txt
src/webhook_service/: README.md
terraform/acm_shared_cert/: .terraform.lock.hcl  acm.tf  dev.tfbackend  dev.tfvars  local-dev.tfbackend  local-dev.tfvars  preview.tfbackend  preview.tfvars  prod.tfbackend  prod.tfvars  provider.tf  variables.tf  versions.tf
terraform/api_gateway_custom_domain/: dev.tfvars  local-dev.tfvars  preview.tfvars  prod.tfvars
terraform/cloudfront_for_apis/: .terraform.lock.hcl  acm.tf  backend.tf  cloudfront.tf  provider.tf  route53.tf  s3.tf  terraform.tfvars  variables.tf  versions.tf
tests/: test.xlsx
(+364 files in other folders)
