[tool.poetry]
name = "aws-educate-tpet-backend"
version = "0.1.0"
description = ""
authors = ["sh1un <a0923183408@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
google-auth = "^2.29.0"
google-api-python-client = "^2.127.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
