[tool.poetry]
name = "aws-educate-tpet-backend"
version = "0.1.0"
description = ""
authors = ["sh1un <a0923183408@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
google-auth = "^2.29.0"
google-api-python-client = "^2.127.0"
pandas = "^2.2.2"
boto3 = "^1.34.122"
requests-toolbelt = "^1.0.0"
botocore = "^1.34.127"
requests = "^2.32.3"
openpyxl = "^3.1.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.2"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

ignore = ["E501"] # line too long, handled by black


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # unused imports


[tool.ruff.lint.isort]
known-third-party = ["boto3", "requests", "pandas"]
